cmake_minimum_required(VERSION 3.17)
project(ex01)

set(CMAKE_CXX_STANDARD 98)

add_executable(ex01
        main.cpp
        AWeapon.cpp
        AWeapon.hpp
        PlasmaRifle.cpp
        PlasmaRifle.hpp
        Enemy.hpp
        Enemy.cpp
        SuperMutant.cpp
        SuperMutant.hpp
        RadScorpion.cpp
        RadScorpion.hpp
        Character.cpp
        Character.hpp
        PowerFist.cpp
        PowerFist.hpp
        JediSword.cpp
        JediSword.hpp
        DarthVader.cpp
        DarthVader.hpp
        )
